2005-11-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/lilypond.tely: remove musedata2ly entry.

2005-11-16  Jürgen Reuter  <reuter@ipd.uka.de>

	* lily/ligature-engraver.cc, lily/include/ligature-engraver.hh,
	scm/define-context-properties.scm: Maintenance bugfix: make
	ligature brackets work again by removing obsolete ligature
	primitive callback push/pop.

	* scm/define-grobs.scm (LigatureBracket): Maintenance bugfix: do
	not call Tuplet_bracket::calc_direction.  Removed obsolete gap
	value.

2005-11-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4 (depth): Explain why absolute directory is
	used and do not call it a path.
	(FLEXLEXER_FILE): Rename from FLEXLEXER_PATH and add file name.

2005-11-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/tie-formatting-problem.hh (class
	Tie_formatting_problem): new file.

	* lily/tie-formatting-problem.cc (common_x_refpoint): new file.

	* Documentation/misc/ChangeLog-2.3:  new file.

	* lily/audio-staff.cc (output): degarianize.

2005-11-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/python-module-rules.make ($(outdir)/%.pyc):
	Unset PYTHONOPTIMIZE.  Fixes install if set.

2005-11-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* python/convertrules.py (conv): add warning about drums. 

	* make/stepmake.make: include toplevel-version.make after config.make.

	* stepmake/aclocal.m4 (depth): make sure $srcdir is absolute.
	also allow python2.4

	* config.make.in (configure-srcdir): remove GXX GCC vars.

	* stepmake/aclocal.m4: don't do non-srcdir build with
	symlinks. Use inclusion, so the src directory name can be changed.

2005-11-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* make/mutopia-vars.make:
	* make/ly-vars.make: Use src-wildcard iso wildcard for source
	files.

2005-11-13  Werner Lemberg  <wl@gnu.org>

	* mf/feta-arrow.mf: For all glyphs, don't mirror `currentpicture'
	but the affected path.  This ensures that the (overlapping) outlines