@@ -47,10 +47,12 @@ Bob Broadus
 Chris Sawer
 Darius Blasband
 Donald Axel
+Eduardo Vieira
 Erlend Aasland
 Matevž Jekovec
 Michael Welsh Duggan
 Milan Zamazal
+Ralph Little
 Scott Russell
 Thomas Bushnell BSG
 Trevor Bača
