@@ -1,5 +1,8 @@
 2005-11-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* stepmake/aclocal.m4: oops. Include $CONFIGFILE.make, not
+	config.make.
+
 	* Documentation/user/lilypond.tely: remove musedata2ly entry.
 
 2005-11-16  Jürgen Reuter  <reuter@ipd.uka.de>
